# duskry-app

./: .env.example  .gitignore  README.md  duskry.key.pub  index.html  package-lock.json  package.json  tsconfig.json
.github/workflows/: release.yml
scripts/: release-mac.sh  sync-tauri-config.mjs
src/: App.tsx  index.css  whats-new.json
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: db.rs  feature_flags.rs  lib.rs  license.rs  logger.rs  main.rs  notify.rs  paths.rs  permissions.rs  rules.rs  tracker.rs  tray.rs
src/components/dashboard/: ActivityFeed.tsx  AppBreakdown.tsx  ProjectList.tsx  StatsRow.tsx  Timeline.tsx
src/components/layout/: SceneBackground.tsx  Sidebar.tsx  TopBar.tsx
src/components/license/: PaywallModal.tsx
src/components/onboarding/: AllSetScreen.tsx  FirstProjectScreen.tsx  NotificationsScreen.tsx  OnboardingShell.tsx  PermissionsScreen.tsx  PlanPickerScreen.tsx  TrialScreen.tsx  WelcomeScreen.tsx
src/components/scenes/: AlpineDayScene.tsx  AmberCityScene.tsx  ArcticNightScene.tsx  CoastalBreezeScene.tsx  DesertCanyonScene.tsx  EmeraldDuskScene.tsx  ForestDawnScene.tsx  GoldenMeadowScene.tsx  HarborMistScene.tsx  NightMountainsScene.tsx  OceanSunsetScene.tsx  SunlitCanyonScene.tsx
src/components/ui/: Select.tsx  Stepper.tsx
src/components/whats-new/: WhatsNewModal.tsx
src/contexts/: UpdaterContext.tsx
src/hooks/: useUpdater.ts
src/lib/: appVersion.ts  checkout.ts  dragState.ts  featureFlags.ts  sceneConfig.ts  utils.ts
src/pages/: ActivityPage.tsx  Overview.tsx  Projects.tsx  Reports.tsx  TimelinePage.tsx
src/pages/Settings/: Appearance.tsx  Billing.tsx  Permissions.tsx  TrackerLog.tsx  Tracking.tsx  index.tsx
src/stores/: useActivityStore.ts  useLicenseStore.ts  usePricesStore.ts  useProjectStore.ts  useSettingsStore.ts
src/styles/: tokens.ts
