[package]
name = "duskry"
version = "0.1.0"
description = "Automatic time tracker"
authors = ["you"]
edition = "2021"

[lib]
name = "duskry_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-opener = "2"
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.31", features = ["bundled"] }
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
aes-gcm = "0.10"
hmac = "0.12"
sha2 = "0.10"
pbkdf2 = "0.12"
hex = "0.4"
once_cell = "1"
dirs = "5"

[target.'cfg(target_os = "macos")'.dependencies]
core-foundation = "0.9"

